force-app/main/default/objects/Doctor_Appointment__c/Doctor_Appointment__c.object-meta.xml
<CustomObject>
    <label>Doctor Appointment</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Doctor Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctor Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>