force-app/main/default/objects/Doctor_Appointment__c/fields/Anamnesis__c.field-meta.xml
<CustomField>
    <fullName>Anamnesis__c</fullName>
    <inlineHelpText>Анамнез</inlineHelpText>
    <label>Anamnesis</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>