force-app/main/default/objects/Doctor_Appointment__c/fields/Appointment_place__c.field-meta.xml
<CustomField>
    <fullName>Appointment_place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Место фактическое приема: Клиника или Центр</description>
    <label>Appointment place</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Doctor Appointments</relationshipLabel>
    <relationshipName>Doctor_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>