force-app/main/default/objects/Doctor_Appointment__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <inlineHelpText>Жалобы</inlineHelpText>
    <label>Complaints</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>