force-app/main/default/objects/Doctor_Appointment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doctor Appointments (Doctor)</relationshipLabel>
    <relationshipName>Doctor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>