force-app/main/default/objects/Doctor_Appointment__c/fields/Eyeground_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Eyeground_Investigation__c</fullName>
    <label>Eyeground Investigation</label>
    <referenceTo>Eyeground_Investigation__c</referenceTo>
    <relationshipLabel>Doctor Appointments</relationshipLabel>
    <relationshipName>Doctor_Appointments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>