force-app/main/default/objects/Doctor_Appointment__c/fields/Objective_status__c.field-meta.xml
<CustomField>
    <fullName>Objective_status__c</fullName>
    <inlineHelpText>Объективный статус</inlineHelpText>
    <label>Objective status</label>
    <referenceTo>Objective_status__c</referenceTo>
    <relationshipLabel>Doctor Appointments</relationshipLabel>
    <relationshipName>Doctor_Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>