force-app/main/default/objects/Doctor_Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Пациент</inlineHelpText>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doctor Appointments</relationshipLabel>
    <relationshipName>Doctor_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>