force-app/main/default/objects/Doctor_Appointment__c/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <label>Patient Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>