force-app/main/default/objects/Doctor_Appointment__c/fields/Patient_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birthdate__c</fullName>
    <label>Patient Birthdate</label>
    <type>Date</type>
</CustomField>