force-app/main/default/objects/Doctor_Appointment__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <inlineHelpText>Рекомендации</inlineHelpText>
    <label>Recommendations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>