force-app/main/default/objects/Doctor_Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Anamnesis__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Complaints__c</columns>
    <columns>Diagnosis__c</columns>
    <columns>Doctor__c</columns>
    <columns>Objective_status__c</columns>
    <columns>Patient__c</columns>
    <columns>Recommendations__c</columns>
    <columns>Eyeground_Investigation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>